@@ -3,6 +3,7 @@ openmediavault-docker-gui (0.2.18) UNRELEASED; urgency=low
   * Add support for host name to the run container dialog
   * Auto wrap description text on repo tab
   * Add filtering on repo/image names in grids
+  * Add state column with filtering to container grid
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 10 Nov 2015 20:29:18 +0100
 
